<resources>
    <string name="app_name">My Application Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="myNanodegreeApps">My Nanodegree Apps!</string>

    <!-- Buttons -->
    <string name="spotifyStreamer">SPOTIFY STREAMER</string>
    <string name="scoresApp">SCORES APP</string>
    <string name="libraryApp">LIBRARY APP</string>
    <string name="buildItBigger">BUILD IT BIGGER</string>
    <string name="xyzReader">XYZ READER</string>
    <string name="myOwnApp">CAPSTONE: MY OWN APP</string>
</resources>
