<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/myNanodegreeApps"
        android:id="@+id/MainHeader"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="23dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="28dp"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:gravity="center"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spotifyStreamer"
        android:id="@+id/spotifyStreamerButton"
        android:layout_below="@+id/MainHeader"
        android:layout_marginTop="41dp"
        android:background="#ffff9315"
        android:layout_marginBottom="12dp"
        android:gravity="center"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scoresApp"
        android:id="@+id/superDuoButton"
        android:layout_below="@+id/spotifyStreamerButton"
        android:layout_centerHorizontal="true"
        android:background="#ffff9315"
        android:layout_marginBottom="12dp"
        android:gravity="center"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/libraryApp"
        android:id="@+id/libraryAppButton"
        android:background="#ffff9315"
        android:layout_below="@+id/superDuoButton"
        android:layout_alignLeft="@+id/superDuoButton"
        android:layout_alignStart="@+id/superDuoButton"
        android:layout_marginBottom="12dp"
        android:gravity="center"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buildItBigger"
        android:id="@+id/buildItBiggerButton"
        android:background="#ffff9315"
        android:layout_below="@+id/libraryAppButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        android:gravity="center"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/xyzReader"
        android:id="@+id/xyzReaderButton"
        android:background="#ffff9315"
        android:layout_below="@+id/buildItBiggerButton"
        android:layout_alignLeft="@+id/libraryAppButton"
        android:layout_alignStart="@+id/libraryAppButton"
        android:layout_marginBottom="12dp"
        android:gravity="center"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/myOwnApp"
        android:id="@+id/myOwnAppButton"
        android:background="@android:color/holo_red_light"
        android:layout_below="@+id/xyzReaderButton"
        android:layout_centerHorizontal="true"
        android:gravity="center"/>

</RelativeLayout>
